1999-10-07  Roland McGrath  <roland@baalperazim.frob.com>

	* start-translator-long.c (fshelp_start_translator_long): Take new
	argument OWNER_UID.  Get child's proc port and do proc_setowner on it.
	* fshelp.h: Update decl.
	* start-translator.c (fshelp_start_translator): Pass new arg to
	fshelp_start_translator_long with value from geteuid ().
	* fetch-root.c (fshelp_fetch_root): Pass UID as new arg to
	fshelp_start_translator_long.

1999-09-12  Roland McGrath  <roland@baalperazim.frob.com>

	* delegate.c (fshelp_delegate_translation): Free ARGZ after RPC.

1999-07-11  Thomas Bushnell, BSG  <tb@mit.edu>

	* set-options.c (fshelp_set_options): Explicitly cast first arg to
	argz_extract to keep GCC quiet.

1999-07-01  Thomas Bushnell, BSG  <tb@mit.edu>

	* translated.c: New file; guts from fshelp.h.
	* perms-isowner.c: Likewise.
	* perms-access.c: Likewise.
	* prems-checkdirmod.c: Likewise.
	* touch.c: Likewise.
	* fshelp.h (fshelp_translated, fshelp_isowner, fshelp_access,
	fshelp_checkdirmod, fshelp_touch): Replace inline definitions with
	ordinary declarations.
	(FSHELP_EI): Removed macro.
	* fshelp.c: Deleted file.
	* Makefile (SRCS): Added translated.c, perms-isowner.c,
	perms-access.c, perms-checkdirmod.c, touch.c.  Removed fshelp.c.

Wed Apr 28 03:06:19 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* fetch-root.c (fshelp_fetch_root): Don't deallocate the
	INIT_PORT_CWDIR after starting the passive translator; we still
	need to keep our reference around until the getroot call happens.
	Reported by Marcus Brinkmann (Marcus.Brinkmann@ruhr-uni-bochum.de).

Tue Apr 20 21:43:20 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* fetch-root.c (fshelp_fetch_root): When starting a passive
	translator, set cwd to be DOTDOT instead of our own cwd.

Sat Mar  6 17:03:02 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* start-translator-long.c (service_fsys_startup): Doc fixes, and
 	omit unused member `dead' from REQUEST.

1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>
